# sitesoft_test_task

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: __main__.py
app/dto/: __init__.py  habr_post_content.py
app/habr/: __init__.py  page_parser.py
config/: .env.template
docker/: dockerfile
docker/app_scripts/: start.sh
docker/common_scripts/: entrypoint.sh
src/: manage.py
src/admin/: asgi.py  settings.py  urls.py
src/core/: __init__.py  rabbit.py
src/core/settings/: __init__.py  postgres.py  rabbit.py
src/parser_app/: admin.py  models.py  urls.py
src/parser_app/dto/: __init__.py  parse.py
src/parser_app/migrations/: 0001_initial.py  0002_urlhabrparser_is_enable.py  0003_alter_habrpostcontent_url_alter_habrsourceurls_url.py
src/parser_app/parser/: __init__.py  page_parser.py
src/parser_app/parser/utils/: __init__.py  get_base_domain.py
src/parser_app/rpc/: __init__.py  worker.py
