[tool.poetry]
name = "sitesoft-test-task"
version = "0.1.0"
description = ""
authors = ["deska13"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.10.5"
django = "^5.1.1"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.9.1"
pydantic-settings = "^2.4.0"
loguru = "^0.7.2"
celery = "^5.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
isort = "^5.12.0"
black = "^23.10.1"
pylint = "^3.0.2"
mypy = "^1.6.1"

[tool.isort]
profile = "black"
known_first_party = ["src"]
skip = []

[tool.black]
line-length = 88
target-version = ['py311']
exclude = '''
/(
\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| docker
| config
| temp
)/
'''

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
implicit_reexport = true
show_error_context = true
pretty = true
show_traceback = true
scripts_are_modules = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
warn_unreachable = true
exclude = ["temp"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
